--- a/client/makefile
+++ b/client/makefile
@@ -1,5 +1,5 @@
 build:
-	go build -o kadev-rk-client-v2.exe
+	GOOS=windows go build -o kadev-rk-client-v2.exe
 
 gen-proto:
 	protoc --go_out=. --go-grpc_out=. -I . kadev-rk.proto
