refactored makefile, added latest client windows executable

--- a/client/makefile
+++ b/client/makefile
@@ -1,5 +1,5 @@
 build:
-	GOOS=windows go build -o kadev-rk-client-v2.exe
+	GOOS=windows go build -o rk-client.exe
 
 gen-proto:
 	protoc --go_out=. --go-grpc_out=. -I . kadev-rk.proto
