--- a/server/makefile
+++ b/server/makefile
@@ -2,4 +2,4 @@ build:
 	go build -o rk-server
 
 gen-proto:
-	protoc --go_out=. --go-grpc_out=. -I . kadev-rk.proto
+	protoc --go_out=. -I . kadev-rk.proto
